# Factorio-CLI-Mod-manger

./: .gitignore  Cargo.toml  LICENSE.md  README.md
fctrserver/serverfiles/: player-data.json
src/: main.rs  options.yml
src/helper/: mod.rs
src/install/: mod.rs
src/json/: mod.rs  mod_full.rs  mod_list.rs  player_data.rs
src/update/: mod.rs
src/verify/: mod.rs
